--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -15,7 +15,8 @@
                         <span>{{subarray.state}}</span>
                         <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                     </md-button>
-                    <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center">
+                    <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
+                        style="padding: 0; margin:0; bottom:0; left: 0; position: absolute">
                         <span style="max-width: 120px;min-width: 120px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('id_code')">
                             <span style="padding: 8px">ID</span>
                             <span class="fa"
