--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
 <!-- Main App JS -->
 <script src="app/services/alarms-service.js"></script>
+<script src="app/services/sound-service.js"></script>
 <script src="app/services/control-service.js"></script>
 <script src="app/services/config-service.js"></script>
 <script src="app/services/data-service.js"></script>
