remove stopPropagation calls on menu items, log error while trying to send control command over non-existent connection

--- a/app/cam-components/cam-components.html
+++ b/app/cam-components/cam-components.html
@@ -93,24 +93,24 @@
                         </md-button>
                         <md-menu-content width="4" style="padding-left: 16px; padding-right: 16px;">
                             <md-menu-item ng-if="!vm.resourcesNames[key].connected">
-                                <md-button ng-click="vm.processCommand(key, 'start'); $event.stopPropagation()"
+                                <md-button ng-click="vm.processCommand(key, 'start');"
                                            title="Start Process">
                                     Start Process
                                 </md-button>
                             </md-menu-item>
                             <md-menu-item ng-if="vm.resourcesNames[key].connected">
-                                <md-button ng-click="vm.processCommand(key, 'restart_process'); $event.stopPropagation()"
+                                <md-button ng-click="vm.processCommand(key, 'restart_process');"
                                            title="Restart Process">
                                     Restart Process
                                 </md-button>
                             </md-menu-item>
                             <md-menu-item ng-if="vm.resourcesNames[key].connected">
-                                <md-button ng-click="vm.processCommand(key, 'kill'); $event.stopPropagation()" title="Kill Process">
+                                <md-button ng-click="vm.processCommand(key, 'kill');" title="Kill Process">
                                     Kill Process
                                 </md-button>
                             </md-menu-item>
                             <md-menu-item ng-if="vm.resourcesNames[key].connected">
-                                <md-button ng-click="vm.processCommand(key, 'stop'); $event.stopPropagation()" title="Stop Process">
+                                <md-button ng-click="vm.processCommand(key, 'stop');" title="Stop Process">
                                     Stop Process
                                 </md-button>
                             </md-menu-item>
