show simple links to irc channel links to katfs

--- a/index.html
+++ b/index.html
@@ -243,15 +243,15 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openIRCDisplay()">
-                        <span class="fa fa-info"></span>
-                        <button>IRC Channel</button>
-                    </md-item-content>
-                </md-item>
-                <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('about')">
                         <span class="fa fa-info"></span>
                         <button>About katGUI</button>
+                    </md-item-content>
+                </md-item>
+                <md-item>
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openIRCDisplay($event)">
+                        <span class="fa"></span>
+                        <button>#IRC</button>
                     </md-item-content>
                 </md-item>
             </md-list>
