added a link to ganglia

--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
                         <button>#IRC</button>
                     </md-item-content>
                 </md-item>
+                <md-item>
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openGangliaLink()">
+                        <span class="fa"></span>
+                        <button>Cluster Monitoring (Ganglia)</button>
+                    </md-item-content>
+                </md-item>
             </md-list>
         </md-content>
     </md-sidenav>
