minimum width and height for weather

--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -1,4 +1,4 @@
-<div flex layout="column" ng-controller="WeatherCtrl as vm" style="padding: 16px;">
+<div flex layout="column" ng-controller="WeatherCtrl as vm" style="padding: 16px; min-width: 800px; min-height: 900px">
     <div layout="column">
         <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
             <span style="margin-top: -10px" flex>Sensor Values</span>
